<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondviolet"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="60dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/courir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        android:padding="30dp"
        android:backgroundTint="@color/boutonprincipale"
        android:text="@string/courir"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        app:cornerRadius="30dp"/>

    <Button
        android:id="@+id/historique_parties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:padding="15dp"
        android:backgroundTint="@color/boutonviolet"
        android:text="@string/historique_parties"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="30dp"/>

    <Button
        android:id="@+id/geolocalisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:padding="15dp"
        android:backgroundTint="@color/boutonviolet"
        android:text="@string/geolocalisation"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="30dp"/>

    <Button
        android:id="@+id/statistiques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:padding="15dp"
        android:backgroundTint="@color/boutonviolet"
        android:text="@string/statistiques"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="30dp"/>



</LinearLayout>