<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/category_choice"
    android:background="@color/fondviolet"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/senior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="15dp"
            android:padding="35dp"
            android:backgroundTint="@color/boutonviolet"
            android:text="@string/senior"
            android:textSize="20sp"
            android:textAllCaps="true"
            app:cornerRadius="15dp"/>

        <Button
            android:id="@+id/m40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="15dp"
            android:padding="35dp"
            android:backgroundTint="@color/boutonviolet"
            android:text="@string/M40"
            android:textSize="20sp"
            android:textAllCaps="true"
            app:cornerRadius="15dp"/>

        <Button
            android:id="@+id/m60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="15dp"
            android:padding="35dp"
            android:backgroundTint="@color/boutonviolet"
            android:text="@string/M60"
            android:textSize="20sp"
            android:textAllCaps="true"
            app:cornerRadius="15dp"/>
    </LinearLayout>

        <Button
            android:id="@+id/annuler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="15dp"
            android:padding="30dp"
            android:backgroundTint="@color/boutonprincipale"
            android:text="@string/annuler"
            android:textSize="20sp"
            android:layout_marginBottom="60dp"
            android:textAllCaps="true"
            app:cornerRadius="15dp"/>

</LinearLayout>